[gd_scene load_steps=11 format=3 uid="uid://cv505v3jddm2f"]

[ext_resource type="Script" uid="uid://bx3utdsw0rojx" path="res://scripts/loot_box_drop.gd" id="1_g2ill"]
[ext_resource type="Texture2D" uid="uid://cm26og86ytcnc" path="res://graphics/UI/icons/money.png" id="1_v6el7"]
[ext_resource type="Shader" uid="uid://dvotcn36qw0jj" path="res://shaders/outline.gdshader" id="2_61cv7"]
[ext_resource type="FontFile" uid="uid://6w8leq531kr1" path="res://fonts/TeenyTinyPixls-o2zo.ttf" id="3_g2ill"]

[sub_resource type="Curve" id="Curve_g2ill"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.0457143, 1), 0.0, 0.0, 0, 0, Vector2(0.954286, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6wv8w"]
shader = ExtResource("2_61cv7")
shader_parameter/outline_color = Color(0, 0, 0, 1)
shader_parameter/is_visible = true

[sub_resource type="Theme" id="Theme_q1g23"]
default_font = ExtResource("3_g2ill")
default_font_size = 5

[sub_resource type="Animation" id="Animation_g2ill"]
resource_name = "drop"
length = 1.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.125, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"setup_particles"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpriteParent/CPUParticles2D:scale_amount_max")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 12.0]
}

[sub_resource type="Animation" id="Animation_6wv8w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteParent/CPUParticles2D:scale_amount_max")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [12.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q1g23"]
_data = {
&"RESET": SubResource("Animation_6wv8w"),
&"drop": SubResource("Animation_g2ill")
}

[node name="LootBoxDrop" type="Control"]
custom_minimum_size = Vector2(0, 160)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -132.5
offset_top = -80.0
offset_right = 132.5
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(0, 320)
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_g2ill")

[node name="OutlineRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0862745, 0.0901961, 0.105882, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="BackgroundRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0.443137, 0.478431, 0.541176, 1)

[node name="CornerRect1" type="ColorRect" parent="MarginContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
color = Color(0.0862745, 0.0901961, 0.105882, 1)

[node name="CornerRect2" type="ColorRect" parent="MarginContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
color = Color(0.0862745, 0.0901961, 0.105882, 1)

[node name="CornerRect3" type="ColorRect" parent="MarginContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
color = Color(0.0862745, 0.0901961, 0.105882, 1)

[node name="CornerRect4" type="ColorRect" parent="MarginContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
color = Color(0.0862745, 0.0901961, 0.105882, 1)

[node name="SpriteParent" type="Control" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 54.0
offset_top = -20.0
offset_right = 94.0
offset_bottom = 20.0
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="SpriteParent"]
scale = Vector2(4, 4)
texture = ExtResource("1_v6el7")
offset = Vector2(5.5, 5.5)

[node name="CPUParticles2D" type="CPUParticles2D" parent="SpriteParent"]
position = Vector2(22, 22)
emitting = false
amount = 16
lifetime = 0.8
one_shot = true
emission_shape = 1
emission_sphere_radius = 16.0
spread = 0.0
gravity = Vector2(0, 0)
scale_amount_min = 0.0
scale_amount_max = 12.0
scale_amount_curve = SubResource("Curve_g2ill")
color = Color(0.968627, 0.858824, 0.611765, 1)

[node name="TextLabel" type="Control" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 128.0
offset_right = 128.0
grow_vertical = 2

[node name="LabelParent" type="Node2D" parent="TextLabel"]
scale = Vector2(4, 4)

[node name="Label" type="Label" parent="TextLabel/LabelParent"]
material = SubResource("ShaderMaterial_6wv8w")
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -7.5
offset_right = 24.0
offset_bottom = 7.5
grow_vertical = 2
theme = SubResource("Theme_q1g23")
text = "COINS:
+ 100"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_q1g23")
}
autoplay = "drop"
